- Updated VBScript and JavaScript modes (Andre Kaplan)
- Improved Search & Replace and HyperSearch dialog boxes
- Utilities->Reload Edit Modes now works with the -nosettings switch
- If the plugin list cannot be loaded, the plugin manager now displays a more
  helpful error message telling the user to install the Firewall plugin if they
  are behind a firewall

+ Bug Fixes

- Fixed a bug in SyntaxDocument's line handling (since 2.4pre2)
- Automatic abbrev expansion didn't work (since 2.4pre1)
- BufferTabs had problems when buffers were closed sometimes (since 2.4pre1)
- If ruleset a::A delegated to b::B which delegated to C, jEdit would look
  for a::C instead of b::C (since 2.4pre2) (Mike Dillon)
- Sources for AElfred XML parser were in the JAR but weren't installed
  (since 2.4pre2)
- Fixed a few problems with resource handling
- When run with the -nosettings switch, jEdit would create a 'mode-cache' file
  in the current directory (since 2.4pre3)

* Version 2.4pre3

jEdit 2.4pre3 is being released so soon after 2.4pre2 because an installer
error prevented 2.4pre2 from being installed properly.

+ New Features

- Previously, jEdit loaded all XML mode files on startup. This could take
  a long time. Now, we write only read a cache file, which can be loaded
  much faster. The cache file needs to be recreated when new edit modes
  are installed; invoke 'Utilities->Reload Edit Modes' to recreate it

+ Enhancements

- Ruby mode updates (Mike Dillon)
- Perl mode updates (Mike Dillon)
- Syntax highlighting streamlined

+ Bug Fixes

- jEdit didn't install due to an installer error (since 2.4pre2)
- jEdit didn't check if the buffer changed on disk when switching buffesr
  (since 2.4pre1)
- The read only flag wasn't set on files (since 2.2 !!!)
- Rule sets inherited the previous rule set's keyword map if no KEYWORDS
  element was specified (since 2.4pre2)
- Fixed escape handling in delegates (Mike Dillon) (since 2.4pre2)

+ API Changes
