@@ -1,6 +1,6 @@
 /*
  * JARClassLoader.java - Loads classes from JAR files
- * Copyright (C) 1999 Slava Pestov
+ * Copyright (C) 1999, 2000 Slava Pestov
  * Portions copyright (C) 1999 mike dillon
  *
  * This program is free software; you can redistribute it and/or
@@ -165,6 +165,8 @@ public class JARClassLoader extends ClassLoader
 				Log.log(Log.ERROR,this,t);
 
 				jEdit.addBrokenPlugin(fileName,name);
+				String[] args = { name, t.toString() };
+				GUIUtilities.error(null,"plugin.start-error",args);
 			}
 		}
 	}
@@ -179,8 +181,8 @@ public class JARClassLoader extends ClassLoader
 		{
 			if(plugins[i].getClass().getName().equals(name))
 			{
-				Log.log(Log.WARNING,this,"A plugin named "
-					+ name + " is already loaded");
+				String[] args = { name };
+				GUIUtilities.error(null,"plugin.already-loaded",args);
 				return;
 			}
 		}
@@ -243,8 +245,9 @@ public class JARClassLoader extends ClassLoader
 				if(System.getProperty("java.version")
 					.compareTo(arg) < 0)
 				{
-					Log.log(Log.ERROR,this,name + " requires"
-						+ " Java " + arg);
+					String[] args = { name, arg,
+						System.getProperty("java.version") };
+					GUIUtilities.error(null,"plugin.dep-jdk",args);
 					return false;
 				}
 			}
@@ -252,9 +255,10 @@ public class JARClassLoader extends ClassLoader
 			{
 				if(jEdit.getBuild().compareTo(arg) < 0)
 				{
-					Log.log(Log.ERROR,this,name + " requires"
-						+ " jEdit " + MiscUtilities
-						.buildToVersion(arg));
+					String needs = MiscUtilities.buildToVersion(arg);
+					String[] args = { name, needs,
+						jEdit.getVersion() };
+					GUIUtilities.error(null,"plugin.dep-jedit",args);
 					return false;
 				}
 			}
@@ -273,22 +277,19 @@ public class JARClassLoader extends ClassLoader
 				String needVersion = arg.substring(index2 + 1);
 				String currVersion = jEdit.getProperty("plugin." 
 					+ plugin + ".version");
-				
+
 				if(currVersion == null)
 				{
-					Log.log(Log.ERROR,this,"No version info"
-						+ " found in plugin " + plugin
-						+ ". Plugin " + name + " needs"
-						+ " version " + needVersion);
+					String[] args = { name, needVersion, plugin };
+					GUIUtilities.error(null,"plugin.dep-plugin.no-version",args);
 					return false;
 				}
 				
 				if(MiscUtilities.compareVersions(currVersion,
 					needVersion) < 0)
 				{
-					Log.log(Log.ERROR,this,name + " requires"
-						+ " plugin " + plugin + " version "
-						+ needVersion);
+					String[] args = { name, needVersion, plugin, currVersion };
+					GUIUtilities.error(null,"plugin.dep-plugin",args);
 					return false;
 				}
 			}
@@ -300,16 +301,10 @@ public class JARClassLoader extends ClassLoader
 				}
 				catch(Exception e)
 				{
-					Log.log(Log.ERROR,this,name +
-						" requires class "
-						+ arg);
+					String[] args = { name, arg };
+					GUIUtilities.error(null,"plugin.dep-class",args);
 					return false;
 				}
-			}
-			else if(what.equals("jext"))
-			{
-				Log.log(Log.ERROR,this,name + " is not a jEdit"
-					+ " plugin");
 			}
 			else
 			{
@@ -408,6 +403,9 @@ public class JARClassLoader extends ClassLoader
 /*
  * ChangeLog:
  * $Log$
+ * Revision 1.35  2000/04/06 09:28:08  sp
+ * Better plugin error reporting, search bar updates
+ *
  * Revision 1.34  2000/04/06 00:55:39  sp
  * didn't compile
  *
@@ -437,24 +435,5 @@ public class JARClassLoader extends ClassLoader
  *
  * Revision 1.25  2000/01/28 00:54:26  sp
  * Blacklisting removed
- *
- * Revision 1.24  2000/01/28 00:20:58  sp
- * Lots of stuff
- *
- * Revision 1.23  2000/01/16 06:09:27  sp
- * Bug fixes
- *
- * Revision 1.22  1999/11/27 06:01:20  sp
- * Faster file loading, geometry fix
- *
- * Revision 1.21  1999/11/21 01:20:30  sp
- * Bug fixes, EditBus updates, fixed some warnings generated by jikes +P
- *
- * Revision 1.20  1999/11/09 10:14:34  sp
- * Macro code cleanups, menu item and tool bar clicks are recorded now, delete
- * word commands, check box menu item support
- *
- * Revision 1.19  1999/10/31 07:15:34  sp
- * New logging API, splash screen updates, bug fixes
  *
  */
